--- a/index.html
+++ b/index.html
@@ -95,12 +95,14 @@
 
       <div class="logo">
         <img
+          class="logo-osis"
           src="picture/osis.png"
           alt="logo OSIS SMK Metland"
           width="70"
           height="70" />
         <div class="spantext">OSIS <span class="span"> MPK</span></div>
         <img
+          class="logo-mpk"
           src="picture/mpk.png"
           alt="logo MPK SMK Metland"
           width="80"
