--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav>
+    <nav class="head-navbar">
       <button
         id="navbar-open"
         data-bs-toggle="collapse"
