--- a/index.html
+++ b/index.html
@@ -202,17 +202,14 @@
     </section>
 
     <!-- Skills & Tools -->
-    <section id="project" class="main-section">
+    <section id="project" class="main-section-project">
       <div class="main-section__text" data-aos="fade-up">
         <h2>Divisi <span>Osis</span></h2>
       </div>
       <div class="main-section__content gallery">
         <div class="cardd" data-aos="fade-down-right">
           <img src="KOOR/bph.png" alt="" />
-          <div class="img-title">
-            <h3>BPH</h3>
-            <p>BADAN PENGURUS HARIAN</p>
-          </div>
+          <div class="img-title"></div>
         </div>
         <div class="cardd" data-aos="fade-down">
           <img src="KOOR/KOOR1.png" alt="" />
@@ -254,6 +251,7 @@
       <div class="main-section__content card-container">
         <article class="card">
           <h5 class="card-title">SEKBID KEIMANAN</h5>
+
           <ol class="card-text">
             <li>
               Melaksanakan peribadatan sesuai dengan ketentuan agama
@@ -386,7 +384,8 @@
           </ol>
         </article>
         <article></article>
-
+      </div>
+      <div class="card-container-7">
         <article class="card">
           <h5 class="card-title">SEKBID KUALITAS JASMANI</h5>
           <ol class="card-text">
@@ -405,7 +404,6 @@
             <li>Melaksanakan pengamanan jajan anak sekolah</li>
           </ol>
         </article>
-        <article></article>
       </div>
     </section>
 
@@ -558,7 +556,7 @@
       class="main-section"
       data-aos="fade-up"
       data-aos-anchor-placement="center-bottom">
-      >
+      
       <div class="main-section__text">
         <h2>Hubungi Developer</h2>
       </div>
